@@ -1,5 +1,15 @@
 2001-08-04  Martin Baulig  <baulig@suse.de>
 
+	* gnome-program.[ch]: Updated copyright info and use
+	"This file is part of GNOME 2.0" to indicate that it's part
+	of the frozed API.
+
+	* libgnome-init.[ch]:  Updated copyright info and use
+	"This file is part of GNOME 2.0" to indicate that it's part
+	of the frozed API.
+
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
 	* gnome-sound.h (gnome_sound_sample_new_from_cache): New func.
 	(gnome_sound_cache_add_sample): New func.
 	(gnome_sound_cache_remove_sample): New func.
